--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "1.7.0",
+    "lodash": "4.2.1",
     "markdown-loader": "0.1.7",
     "marked": "0.3.5",
+    "mkdir-p": "0.0.7",
     "phantomjs-polyfill": "0.0.1",
     "phantomjs-prebuilt": "2.1.4",
     "pre-commit": "1.1.2",
